--- a/src/Test/ExtraCoreTest/CoreTest.ioc
+++ b/src/Test/ExtraCoreTest/CoreTest.ioc
@@ -31,12 +31,14 @@ I2C1.Timing=0x009034B6
 KeepUserPlacement=false
 LPUART1.BaudRate=115200
 LPUART1.IPParameters=BaudRate
+LTDC.ActiveH=480
+LTDC.ActiveW=800
 LTDC.Blue_L0=255
 LTDC.FBStartAdress_L0=0xD0000000
 LTDC.Green_L0=255
-LTDC.IPParameters=Layers,WindowX1_L0,WindowY1_L0,PixelFormat_L0,FBStartAdress_L0,ImageWidth_L0,ImageHeight_L0,Blue_L0,Green_L0,Red_L0
+LTDC.IPParameters=Layers,WindowX1_L0,WindowY1_L0,PixelFormat_L0,FBStartAdress_L0,ImageWidth_L0,ImageHeight_L0,Blue_L0,Green_L0,Red_L0,ActiveW,ActiveH
 LTDC.ImageHeight_L0=480
-LTDC.ImageWidth_L0=2400
+LTDC.ImageWidth_L0=800
 LTDC.Layers=0
 LTDC.PixelFormat_L0=LTDC_PIXEL_FORMAT_RGB888
 LTDC.Red_L0=255
@@ -644,7 +646,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -662,7 +664,7 @@ QUADSPI.ClockPrescaler=4
 QUADSPI.FlashSize=25
 QUADSPI.IPParameters=ClockPrescaler,SampleShifting,FlashSize
 QUADSPI.SampleShifting=QSPI_SAMPLE_SHIFTING_HALFCYCLE
-RCC.ADCFreq_Value=480000000
+RCC.ADCFreq_Value=400000000
 RCC.AHB12Freq_Value=200000000
 RCC.AHB4Freq_Value=200000000
 RCC.APB1Freq_Value=100000000
@@ -687,23 +689,24 @@ RCC.DIVM1=5
 RCC.DIVM2=5
 RCC.DIVM3=5
 RCC.DIVN1=160
-RCC.DIVN2=192
-RCC.DIVN3=192
+RCC.DIVN2=160
+RCC.DIVN3=160
 RCC.DIVP1Freq_Value=400000000
-RCC.DIVP2Freq_Value=480000000
-RCC.DIVP3Freq_Value=480000000
+RCC.DIVP2Freq_Value=400000000
+RCC.DIVP3Freq_Value=400000000
 RCC.DIVQ1=4
 RCC.DIVQ1Freq_Value=200000000
-RCC.DIVQ2Freq_Value=480000000
-RCC.DIVQ3Freq_Value=480000000
+RCC.DIVQ2Freq_Value=400000000
+RCC.DIVQ3Freq_Value=400000000
 RCC.DIVR1Freq_Value=400000000
-RCC.DIVR2=10
-RCC.DIVR2Freq_Value=96000000
-RCC.DIVR3=65
-RCC.DIVR3Freq_Value=14769230.76923077
+RCC.DIVR2=8
+RCC.DIVR2Freq_Value=100000000
+RCC.DIVR3=80
+RCC.DIVR3Freq_Value=10000000
 RCC.FDCANFreq_Value=200000000
+RCC.FLatency-AdvancedSettings=FLASH_LATENCY_0
 RCC.FMCCLockSelection=RCC_FMCCLKSOURCE_PLL2
-RCC.FMCFreq_Value=96000000
+RCC.FMCFreq_Value=100000000
 RCC.FamilyName=M
 RCC.HCLK3ClockFreq_Value=200000000
 RCC.HCLKFreq_Value=200000000
@@ -711,12 +714,12 @@ RCC.HPRE=RCC_HCLK_DIV2
 RCC.HRTIMFreq_Value=200000000
 RCC.I2C123Freq_Value=100000000
 RCC.I2C4Freq_Value=100000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CPU2Freq_Value,CPU2SystikFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2,DIVR2Freq_Value,DIVR3,DIVR3Freq_Value,FDCANFreq_Value,FMCCLockSelection,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL1_VCI_Range-AdvancedSettings,PLL1_VCO_SEL-AdvancedSettings,PLL3FRACN,PLLFRACN,PLLSourceVirtual,PWR_Regulator_Voltage_Scale,QSPICLockSelection,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SupplySource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CPU2Freq_Value,CPU2SystikFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2,DIVR2Freq_Value,DIVR3,DIVR3Freq_Value,FDCANFreq_Value,FLatency-AdvancedSettings,FMCCLockSelection,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL1_VCI_Range-AdvancedSettings,PLL1_VCO_SEL-AdvancedSettings,PLL3FRACN,PLLFRACN,PLLSourceVirtual,PWR_Regulator_Voltage_Scale,QSPICLockSelection,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SupplySource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=100000000
 RCC.LPTIM2Freq_Value=100000000
 RCC.LPTIM345Freq_Value=100000000
 RCC.LPUART1Freq_Value=100000000
-RCC.LTDCFreq_Value=14769230.76923077
+RCC.LTDCFreq_Value=10000000
 RCC.MCO1PinFreq_Value=64000000
 RCC.MCO2PinFreq_Value=400000000
 RCC.PLL1_VCI_Range-AdvancedSettings=RCC_PLL1VCIRANGE_0
@@ -726,7 +729,7 @@ RCC.PLLFRACN=0
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PWR_Regulator_Voltage_Scale=PWR_REGULATOR_VOLTAGE_SCALE0
 RCC.QSPICLockSelection=RCC_QSPICLKSOURCE_PLL2
-RCC.QSPIFreq_Value=96000000
+RCC.QSPIFreq_Value=100000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
 RCC.SAI1Freq_Value=200000000
@@ -749,8 +752,8 @@ RCC.USART16Freq_Value=100000000
 RCC.USART234578Freq_Value=100000000
 RCC.USBFreq_Value=200000000
 RCC.VCO1OutputFreq_Value=800000000
-RCC.VCO2OutputFreq_Value=960000000
-RCC.VCO3OutputFreq_Value=960000000
+RCC.VCO2OutputFreq_Value=800000000
+RCC.VCO3OutputFreq_Value=800000000
 RCC.VCOInput1Freq_Value=5000000
 RCC.VCOInput2Freq_Value=5000000
 RCC.VCOInput3Freq_Value=5000000
