--- a/src/Test/GY91-Test/GY91-Test.ioc
+++ b/src/Test/GY91-Test/GY91-Test.ioc
@@ -12,29 +12,33 @@ Mcu.IP2=RCC
 Mcu.IP3=SPI1
 Mcu.IP4=SYS
 Mcu.IP5=TIM2
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP6=TIM16
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32F072R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PC7
-Mcu.Pin11=PA9
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PB8
-Mcu.Pin15=PB9
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin17=VP_TIM2_VS_no_output1
+Mcu.Pin10=PA9
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PB4
+Mcu.Pin14=PB6
+Mcu.Pin15=PB8
+Mcu.Pin16=PB9
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM2_VS_no_output1
+Mcu.Pin19=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=VP_TIM16_VS_no_output1
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=18
+Mcu.Pin8=PA7
+Mcu.Pin9=PC7
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F072RBTx
@@ -46,7 +50,8 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM16_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+NVIC.TIM2_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -75,8 +80,6 @@ PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
-PA6.Mode=Full_Duplex_Master
-PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA9.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
@@ -85,6 +88,12 @@ PA9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA9.Locked=true
 PA9.PinState=GPIO_PIN_SET
 PA9.Signal=GPIO_Output
+PB4.Mode=Full_Duplex_Master
+PB4.Signal=SPI1_MISO
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=LED
+PB6.Locked=true
+PB6.Signal=GPIO_Output
 PB8.Locked=true
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
@@ -92,7 +101,7 @@ PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
 PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PC13.GPIO_Label=LED
+PC13.GPIO_Label=PB
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC13.Locked=true
 PC13.Signal=GPXTI13
@@ -102,11 +111,9 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC7.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=BARO
-PC7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC7.Locked=true
-PC7.PinState=GPIO_PIN_SET
 PC7.Signal=GPIO_Output
 PF0-OSC_IN.Locked=true
 PF0-OSC_IN.Mode=HSE-External-Clock-Source
@@ -141,7 +148,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -173,17 +180,25 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM16.Channel=TIM_CHANNEL_1
+TIM16.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM16.IPParameters=Prescaler,ClockDivision,Period,Channel
+TIM16.Period=10000 - 1
+TIM16.Prescaler=4800 - 1
 TIM2.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
-TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV2
-TIM2.IPParameters=Channel-Output Compare1 No Output,AutoReloadPreload,TIM_MasterOutputTrigger,ClockDivision
-TIM2.TIM_MasterOutputTrigger=TIM_TRGO_OC1REF
+TIM2.IPParameters=Channel-Output Compare1 No Output,Prescaler,Period
+TIM2.Period=1000000
+TIM2.Prescaler=48
 USART2.BaudRate=921600
 USART2.IPParameters=VirtualMode,VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode=VM_ASYNC
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM16_VS_ClockSourceINT.Signal=TIM16_VS_ClockSourceINT
+VP_TIM16_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM16_VS_no_output1.Signal=TIM16_VS_no_output1
 VP_TIM2_VS_no_output1.Mode=Output Compare1 No Output
 VP_TIM2_VS_no_output1.Signal=TIM2_VS_no_output1
 board=NUCLEO-F072RB
