--- a/src/Test/GY91-Test/GY91-Test.ioc
+++ b/src/Test/GY91-Test/GY91-Test.ioc
@@ -1,4 +1,35 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.Request0=TIM3_CH3
+Dma.Request1=TIM6_UP
+Dma.Request2=TIM2_CH1
+Dma.RequestsNb=3
+Dma.TIM2_CH1.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM2_CH1.2.Instance=DMA1_Channel5
+Dma.TIM2_CH1.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.TIM2_CH1.2.MemInc=DMA_MINC_ENABLE
+Dma.TIM2_CH1.2.Mode=DMA_CIRCULAR
+Dma.TIM2_CH1.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.TIM2_CH1.2.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM2_CH1.2.Priority=DMA_PRIORITY_HIGH
+Dma.TIM2_CH1.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.TIM3_CH3.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM3_CH3.0.Instance=DMA1_Channel2
+Dma.TIM3_CH3.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM3_CH3.0.MemInc=DMA_MINC_ENABLE
+Dma.TIM3_CH3.0.Mode=DMA_CIRCULAR
+Dma.TIM3_CH3.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM3_CH3.0.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM3_CH3.0.Priority=DMA_PRIORITY_LOW
+Dma.TIM3_CH3.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.TIM6_UP.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM6_UP.1.Instance=DMA1_Channel3
+Dma.TIM6_UP.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM6_UP.1.MemInc=DMA_MINC_ENABLE
+Dma.TIM6_UP.1.Mode=DMA_CIRCULAR
+Dma.TIM6_UP.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM6_UP.1.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM6_UP.1.Priority=DMA_PRIORITY_HIGH
+Dma.TIM6_UP.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Speed_Mode=I2C_Fast
@@ -6,52 +37,61 @@ I2C1.IPParameters=I2C_Speed_Mode,Timing
 I2C1.Timing=0x0000020B
 KeepUserPlacement=false
 Mcu.Family=STM32F0
-Mcu.IP0=I2C1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IP5=TIM2
-Mcu.IP6=TIM16
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP0=DMA
+Mcu.IP1=I2C1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI1
+Mcu.IP5=SYS
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=TIM6
+Mcu.IP9=USART2
+Mcu.IPNb=10
 Mcu.Name=STM32F072R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA9
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PB4
-Mcu.Pin14=PB6
-Mcu.Pin15=PB8
-Mcu.Pin16=PB9
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_TIM2_VS_no_output1
-Mcu.Pin19=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin10=PC7
+Mcu.Pin11=PA9
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB4
+Mcu.Pin15=PB5
+Mcu.Pin16=PB6
+Mcu.Pin17=PB8
+Mcu.Pin18=PB9
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_TIM16_VS_no_output1
+Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM3_VS_no_output3
+Mcu.Pin23=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PA7
-Mcu.Pin9=PC7
-Mcu.PinsNb=21
+Mcu.Pin5=PA0
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA5
+Mcu.Pin9=PA7
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F072RBTx
 MxCube.Version=6.2.0
 MxDb.Version=DB.6.0.20
+NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Channel4_5_6_7_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true
-NVIC.TIM16_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 NVIC.TIM2_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+PA0.Signal=S_TIM2_CH1_ETR
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -90,8 +130,12 @@ PA9.PinState=GPIO_PIN_SET
 PA9.Signal=GPIO_Output
 PB4.Mode=Full_Duplex_Master
 PB4.Signal=SPI1_MISO
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=LED_B
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=LED
+PB6.GPIO_Label=LED_R
 PB6.Locked=true
 PB6.Signal=GPIO_Output
 PB8.Locked=true
@@ -148,7 +192,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -173,6 +217,8 @@ RCC.USART1Freq_Value=48000000
 RCC.USART2Freq_Value=48000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1_ETR.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
 SPI1.CalculateBaudRate=1.5 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
@@ -180,26 +226,32 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-TIM16.Channel=TIM_CHANNEL_1
-TIM16.ClockDivision=TIM_CLOCKDIVISION_DIV1
-TIM16.IPParameters=Prescaler,ClockDivision,Period,Channel
-TIM16.Period=10000 - 1
-TIM16.Prescaler=4800 - 1
-TIM2.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-Output Compare1 No Output,Prescaler,Period
-TIM2.Period=1000000
-TIM2.Prescaler=48
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1,AutoReloadPreload
+TIM2.Period=682
+TIM2.Prescaler=0
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.Channel-Output\ Compare3\ No\ Output=TIM_CHANNEL_3
+TIM3.IPParameters=AutoReloadPreload,Period,Channel-Output Compare3 No Output
+TIM3.Period=100
+TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM6.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM6.Period=100
+TIM6.Prescaler=0
 USART2.BaudRate=921600
 USART2.IPParameters=VirtualMode,VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode=VM_ASYNC
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM16_VS_ClockSourceINT.Signal=TIM16_VS_ClockSourceINT
-VP_TIM16_VS_no_output1.Mode=Output Compare1 No Output
-VP_TIM16_VS_no_output1.Signal=TIM16_VS_no_output1
-VP_TIM2_VS_no_output1.Mode=Output Compare1 No Output
-VP_TIM2_VS_no_output1.Signal=TIM2_VS_no_output1
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM3_VS_no_output3.Mode=Output Compare3 No Output
+VP_TIM3_VS_no_output3.Signal=TIM3_VS_no_output3
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=NUCLEO-F072RB
 boardIOC=true
