beep-sound test

--- a/src/Test/ExtraCoreTest/CoreTest.ioc
+++ b/src/Test/ExtraCoreTest/CoreTest.ioc
@@ -2,9 +2,48 @@
 CORTEX_M7.CPU_DCache=Enabled
 CORTEX_M7.CPU_ICache=Enabled
 CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache
-CortexM4.IPs=CORTEX_M4\:I,DEBUG,FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,OPENAMP_M4\:I,PDM2PCM_M4\:I,PWR,RCC,RESMGR_UTILITY,SYS_M4\:I,USB_DEVICE_M4\:I,USB_HOST_M4\:I,VREFBUF,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I
-CortexM7.IPs=CORTEX_M7\:I,DEBUG\:I,FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,OPENAMP_M7\:I,PDM2PCM_M7\:I,PWR\:I,RCC\:I,RESMGR_UTILITY\:I,SYS\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,VREFBUF\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,QUADSPI\:I,I2C1\:I,LPUART1\:I,LTDC\:I,FMC\:I
+CortexM4.IPs=CORTEX_M4\:I,DEBUG,FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,OPENAMP_M4\:I,PDM2PCM_M4\:I,PWR,RCC,RESMGR_UTILITY,SYS_M4\:I,USB_DEVICE_M4\:I,USB_HOST_M4\:I,VREFBUF,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,RTC
+CortexM7.IPs=CORTEX_M7\:I,DEBUG\:I,FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,OPENAMP_M7\:I,PDM2PCM_M7\:I,PWR\:I,RCC\:I,RESMGR_UTILITY\:I,SYS\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,VREFBUF\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,QUADSPI\:I,I2C1\:I,LPUART1\:I,LTDC\:I,FMC\:I,TIM3\:I,TIM4\:I,RTC\:I
 CortexM7.Pins=PG10,PI8,PF10
+Dma.Request0=TIM4_CH1
+Dma.Request1=TIM4_CH2
+Dma.RequestsNb=2
+Dma.TIM4_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM4_CH1.0.EventEnable=DISABLE
+Dma.TIM4_CH1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.TIM4_CH1.0.Instance=DMA1_Stream0
+Dma.TIM4_CH1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM4_CH1.0.MemInc=DMA_MINC_ENABLE
+Dma.TIM4_CH1.0.Mode=DMA_CIRCULAR
+Dma.TIM4_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM4_CH1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM4_CH1.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.TIM4_CH1.0.Priority=DMA_PRIORITY_HIGH
+Dma.TIM4_CH1.0.RequestNumber=1
+Dma.TIM4_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.TIM4_CH1.0.SignalID=NONE
+Dma.TIM4_CH1.0.SyncEnable=DISABLE
+Dma.TIM4_CH1.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.TIM4_CH1.0.SyncRequestNumber=1
+Dma.TIM4_CH1.0.SyncSignalID=NONE
+Dma.TIM4_CH2.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM4_CH2.1.EventEnable=DISABLE
+Dma.TIM4_CH2.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.TIM4_CH2.1.Instance=DMA1_Stream1
+Dma.TIM4_CH2.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM4_CH2.1.MemInc=DMA_MINC_ENABLE
+Dma.TIM4_CH2.1.Mode=DMA_CIRCULAR
+Dma.TIM4_CH2.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM4_CH2.1.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM4_CH2.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.TIM4_CH2.1.Priority=DMA_PRIORITY_HIGH
+Dma.TIM4_CH2.1.RequestNumber=1
+Dma.TIM4_CH2.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.TIM4_CH2.1.SignalID=NONE
+Dma.TIM4_CH2.1.SyncEnable=DISABLE
+Dma.TIM4_CH2.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.TIM4_CH2.1.SyncRequestNumber=1
+Dma.TIM4_CH2.1.SyncSignalID=NONE
 FMC.AddressSetupTime1=9
 FMC.BusTurnAroundDuration1=4
 FMC.CASLatency1=FMC_SDRAM_CAS_LATENCY_3
@@ -50,39 +89,50 @@ Mcu.ContextNb=2
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M4
 Mcu.IP1=CORTEX_M7
-Mcu.IP10=RCC
-Mcu.IP11=SYS_M4
-Mcu.IP12=SYS
+Mcu.IP10=QUADSPI
+Mcu.IP11=RCC
+Mcu.IP12=RTC
+Mcu.IP13=SYS_M4
+Mcu.IP14=SYS
+Mcu.IP15=TIM3
+Mcu.IP16=TIM4
 Mcu.IP2=DEBUG
-Mcu.IP3=FMC
-Mcu.IP4=I2C1
-Mcu.IP5=LPUART1
-Mcu.IP6=LTDC
-Mcu.IP7=NVIC1
-Mcu.IP8=NVIC2
-Mcu.IP9=QUADSPI
-Mcu.IPNb=13
+Mcu.IP3=DMA
+Mcu.IP4=FMC
+Mcu.IP5=I2C1
+Mcu.IP6=LPUART1
+Mcu.IP7=LTDC
+Mcu.IP8=NVIC1
+Mcu.IP9=NVIC2
+Mcu.IPNb=17
 Mcu.Name=STM32H745XIHx
 Mcu.Package=TFBGA240
 Mcu.Pin0=PI6
 Mcu.Pin1=PI5
 Mcu.Pin10=PE1
-Mcu.Pin100=PE13
-Mcu.Pin101=PH6
-Mcu.Pin102=PH8
-Mcu.Pin103=PD10
-Mcu.Pin104=PD9
-Mcu.Pin105=PJ3
-Mcu.Pin106=PJ4
-Mcu.Pin107=PG1
-Mcu.Pin108=PE7
-Mcu.Pin109=PE14
+Mcu.Pin100=PE8
+Mcu.Pin101=PE13
+Mcu.Pin102=PH6
+Mcu.Pin103=PH8
+Mcu.Pin104=PD10
+Mcu.Pin105=PD9
+Mcu.Pin106=PB0
+Mcu.Pin107=PJ3
+Mcu.Pin108=PJ4
+Mcu.Pin109=PG1
 Mcu.Pin11=PK4
-Mcu.Pin110=PH7
-Mcu.Pin111=PD8
-Mcu.Pin112=VP_SYS_VS_Systick
-Mcu.Pin113=VP_SYS_M4_VS_Systick
+Mcu.Pin110=PE7
+Mcu.Pin111=PE14
+Mcu.Pin112=PH7
+Mcu.Pin113=PD8
+Mcu.Pin114=VP_RTC_VS_RTC_Activate
+Mcu.Pin115=VP_SYS_VS_Systick
+Mcu.Pin116=VP_SYS_M4_VS_Systick
+Mcu.Pin117=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin118=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin119=VP_TIM4_VS_no_output1
 Mcu.Pin12=PJ15
+Mcu.Pin120=VP_TIM4_VS_no_output2
 Mcu.Pin13=PA14 (JTCK/SWCLK)
 Mcu.Pin14=PI2
 Mcu.Pin15=PH15
@@ -174,17 +224,19 @@ Mcu.Pin92=PH12
 Mcu.Pin93=PD11
 Mcu.Pin94=PD12
 Mcu.Pin95=PD13
-Mcu.Pin96=PJ2
-Mcu.Pin97=PF11
-Mcu.Pin98=PG0
-Mcu.Pin99=PE8
-Mcu.PinsNb=114
+Mcu.Pin96=PB1
+Mcu.Pin97=PJ2
+Mcu.Pin98=PF11
+Mcu.Pin99=PG0
+Mcu.PinsNb=121
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H745XIHx
 MxCube.Version=6.2.1
 MxDb.Version=DB.6.0.21
 NVIC1.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC1.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC1.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC1.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.ForceEnableDMAVector=true
 NVIC1.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -195,6 +247,8 @@ NVIC1.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC1.QUADSPI_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC1.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC1.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC1.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC1.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -223,6 +277,16 @@ PA9.GPIOParameters=PinAttribute
 PA9.Mode=Asynchronous
 PA9.PinAttribute=CortexM7
 PA9.Signal=LPUART1_TX
+PB0.GPIOParameters=GPIO_Speed,PinAttribute
+PB0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB0.Locked=true
+PB0.PinAttribute=CortexM7
+PB0.Signal=S_TIM3_CH3
+PB1.GPIOParameters=GPIO_Speed,PinAttribute
+PB1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB1.Locked=true
+PB1.PinAttribute=CortexM7
+PB1.Signal=S_TIM3_CH4
 PB2.GPIOParameters=GPIO_Speed,PinAttribute
 PB2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB2.Locked=true
@@ -659,7 +723,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_FMC_Init-FMC-false-HAL-true-CortexM7,4-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,5-MX_LPUART1_UART_Init-LPUART1-false-HAL-true-CortexM7,6-MX_I2C1_Init-I2C1-false-HAL-true-CortexM7,7-MX_LTDC_Init-LTDC-true-HAL-true-CortexM7,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-MX_DMA_Init-DMA-false-HAL-true-CortexM7,3-SystemClock_Config-RCC-false-HAL-false-CortexM7,4-MX_FMC_Init-FMC-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_LPUART1_UART_Init-LPUART1-false-HAL-true-CortexM7,7-MX_I2C1_Init-I2C1-false-HAL-true-CortexM7,8-MX_LTDC_Init-LTDC-true-HAL-true-CortexM7,9-MX_TIM3_Init-TIM3-false-HAL-true-CortexM7,10-MX_TIM4_Init-TIM4-false-HAL-true-CortexM7,11-MX_RTC_Init-RTC-false-HAL-true-CortexM7,1-MX_DMA_Init-DMA-false-HAL-true-CortexM4,2-MX_RTC_Init-RTC-true-HAL-false-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 QUADSPI.ClockPrescaler=4
 QUADSPI.FlashSize=25
 QUADSPI.IPParameters=ClockPrescaler,SampleShifting,FlashSize
@@ -921,9 +985,35 @@ SH.FMC_SDNRAS.0=FMC_SDNRAS,12b-sda1
 SH.FMC_SDNRAS.ConfNb=1
 SH.FMC_SDNWE.0=FMC_SDNWE,12b-sda1
 SH.FMC_SDNWE.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
+SH.S_TIM3_CH3.ConfNb=1
+SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
+SH.S_TIM3_CH4.ConfNb=1
 SYS.userName=SYS_M7
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM3.IPParameters=Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period,Prescaler,AutoReloadPreload
+TIM3.Period=1023
+TIM3.Prescaler=2
+TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM4.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM4.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
+TIM4.IPParameters=Channel-Output Compare1 No Output,Channel-Output Compare2 No Output,Period,Prescaler,AutoReloadPreload
+TIM4.Period=99
+TIM4.Prescaler=2
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_M4_VS_Systick.Mode=SysTick
 VP_SYS_M4_VS_Systick.Signal=SYS_M4_VS_Systick
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_TIM4_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM4_VS_no_output1.Signal=TIM4_VS_no_output1
+VP_TIM4_VS_no_output2.Mode=Output Compare2 No Output
+VP_TIM4_VS_no_output2.Signal=TIM4_VS_no_output2
 board=custom
