shell command & stand-by

--- a/src/Test/ExtraCoreTest/CoreTest.ioc
+++ b/src/Test/ExtraCoreTest/CoreTest.ioc
@@ -235,20 +235,21 @@ Mcu.UserName=STM32H745XIHx
 MxCube.Version=6.2.1
 MxDb.Version=DB.6.0.21
 NVIC1.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC1.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC1.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC1.DMA1_Stream0_IRQn=true\:1\:0\:true\:false\:true\:false\:true
+NVIC1.DMA1_Stream1_IRQn=true\:1\:0\:true\:false\:true\:false\:true
 NVIC1.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.ForceEnableDMAVector=true
 NVIC1.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC1.LPUART1_IRQn=true\:3\:0\:true\:false\:true\:true\:true
 NVIC1.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC1.QUADSPI_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC1.QUADSPI_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 NVIC1.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC1.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC1.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC1.TIM3_IRQn=true\:2\:0\:true\:false\:true\:true\:true
+NVIC1.TIM4_IRQn=true\:2\:0\:true\:false\:true\:true\:true
 NVIC1.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
