--- a/src/Test/ExtraCoreTest/CoreTest.ioc
+++ b/src/Test/ExtraCoreTest/CoreTest.ioc
@@ -239,6 +239,7 @@ NVIC1.DMA1_Stream0_IRQn=true\:1\:0\:true\:false\:true\:false\:true
 NVIC1.DMA1_Stream1_IRQn=true\:1\:0\:true\:false\:true\:false\:true
 NVIC1.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.ForceEnableDMAVector=true
+NVIC1.HSEM1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC1.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.LPUART1_IRQn=true\:3\:0\:true\:false\:true\:true\:true
 NVIC1.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -254,6 +255,7 @@ NVIC1.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.ForceEnableDMAVector=true
+NVIC2.HSEM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC2.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC2.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
