--- a/src/Test/ExtraCoreTest/CoreTest.ioc
+++ b/src/Test/ExtraCoreTest/CoreTest.ioc
@@ -3,7 +3,7 @@ CORTEX_M7.CPU_DCache=Enabled
 CORTEX_M7.CPU_ICache=Enabled
 CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache
 CortexM4.IPs=CORTEX_M4\:I,DEBUG,FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,OPENAMP_M4\:I,PDM2PCM_M4\:I,PWR,RCC,RESMGR_UTILITY,SYS_M4\:I,USB_DEVICE_M4\:I,USB_HOST_M4\:I,VREFBUF,WWDG2\:I,DMA,BDMA,MDMA,NVIC2\:I,RTC
-CortexM7.IPs=CORTEX_M7\:I,DEBUG\:I,FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,OPENAMP_M7\:I,PDM2PCM_M7\:I,PWR\:I,RCC\:I,RESMGR_UTILITY\:I,SYS\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,VREFBUF\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,QUADSPI\:I,I2C1\:I,LPUART1\:I,LTDC\:I,FMC\:I,TIM3\:I,TIM4\:I,RTC\:I
+CortexM7.IPs=CORTEX_M7\:I,DEBUG\:I,FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,OPENAMP_M7\:I,PDM2PCM_M7\:I,PWR\:I,RCC\:I,RESMGR_UTILITY\:I,SYS\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,VREFBUF\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,QUADSPI\:I,I2C1\:I,LPUART1\:I,LTDC\:I,FMC\:I,TIM3\:I,TIM4\:I,RTC\:I,DMA2D\:I
 CortexM7.Pins=PG10,PI8,PF10
 Dma.Request0=TIM4_CH1
 Dma.Request1=TIM4_CH2
@@ -72,39 +72,50 @@ LPUART1.BaudRate=115200
 LPUART1.IPParameters=BaudRate
 LTDC.ActiveH=480
 LTDC.ActiveW=800
-LTDC.Blue_L0=255
+LTDC.Alpha_L0=255
+LTDC.BlendingFactor1_L0=LTDC_BLENDING_FACTOR1_PAxCA
+LTDC.BlendingFactor2_L0=LTDC_BLENDING_FACTOR2_PAxCA
+LTDC.Blue_L0=0
+LTDC.DEPolarity=LTDC_DEPOLARITY_AL
 LTDC.FBStartAdress_L0=0xD0000000
-LTDC.Green_L0=255
-LTDC.IPParameters=Layers,WindowX1_L0,WindowY1_L0,PixelFormat_L0,FBStartAdress_L0,ImageWidth_L0,ImageHeight_L0,Blue_L0,Green_L0,Red_L0,ActiveW,ActiveH
+LTDC.Green_L0=0
+LTDC.HBP=88
+LTDC.HFP=40
+LTDC.HSync=48
+LTDC.IPParameters=Layers,WindowX1_L0,WindowY1_L0,PixelFormat_L0,FBStartAdress_L0,ImageWidth_L0,ImageHeight_L0,Blue_L0,Green_L0,Red_L0,ActiveW,ActiveH,Alpha_L0,DEPolarity,BlendingFactor1_L0,BlendingFactor2_L0,HSync,HBP,HFP,VBP,VFP,VSync
 LTDC.ImageHeight_L0=480
 LTDC.ImageWidth_L0=800
 LTDC.Layers=0
-LTDC.PixelFormat_L0=LTDC_PIXEL_FORMAT_RGB888
-LTDC.Red_L0=255
-LTDC.WindowX1_L0=799
-LTDC.WindowY1_L0=479
+LTDC.PixelFormat_L0=LTDC_PIXEL_FORMAT_RGB565
+LTDC.Red_L0=0
+LTDC.VBP=32
+LTDC.VFP=13
+LTDC.VSync=3
+LTDC.WindowX1_L0=800
+LTDC.WindowY1_L0=480
 Mcu.Context0=CortexM7
 Mcu.Context1=CortexM4
 Mcu.ContextNb=2
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M4
 Mcu.IP1=CORTEX_M7
-Mcu.IP10=QUADSPI
-Mcu.IP11=RCC
-Mcu.IP12=RTC
-Mcu.IP13=SYS_M4
-Mcu.IP14=SYS
-Mcu.IP15=TIM3
-Mcu.IP16=TIM4
+Mcu.IP10=NVIC2
+Mcu.IP11=QUADSPI
+Mcu.IP12=RCC
+Mcu.IP13=RTC
+Mcu.IP14=SYS_M4
+Mcu.IP15=SYS
+Mcu.IP16=TIM3
+Mcu.IP17=TIM4
 Mcu.IP2=DEBUG
 Mcu.IP3=DMA
-Mcu.IP4=FMC
-Mcu.IP5=I2C1
-Mcu.IP6=LPUART1
-Mcu.IP7=LTDC
-Mcu.IP8=NVIC1
-Mcu.IP9=NVIC2
-Mcu.IPNb=17
+Mcu.IP4=DMA2D
+Mcu.IP5=FMC
+Mcu.IP6=I2C1
+Mcu.IP7=LPUART1
+Mcu.IP8=LTDC
+Mcu.IP9=NVIC1
+Mcu.IPNb=18
 Mcu.Name=STM32H745XIHx
 Mcu.Package=TFBGA240
 Mcu.Pin0=PI6
@@ -125,14 +136,15 @@ Mcu.Pin110=PE7
 Mcu.Pin111=PE14
 Mcu.Pin112=PH7
 Mcu.Pin113=PD8
-Mcu.Pin114=VP_RTC_VS_RTC_Activate
-Mcu.Pin115=VP_SYS_VS_Systick
-Mcu.Pin116=VP_SYS_M4_VS_Systick
-Mcu.Pin117=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin118=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin119=VP_TIM4_VS_no_output1
+Mcu.Pin114=VP_DMA2D_VS_DMA2D
+Mcu.Pin115=VP_RTC_VS_RTC_Activate
+Mcu.Pin116=VP_SYS_VS_Systick
+Mcu.Pin117=VP_SYS_M4_VS_Systick
+Mcu.Pin118=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin119=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin12=PJ15
-Mcu.Pin120=VP_TIM4_VS_no_output2
+Mcu.Pin120=VP_TIM4_VS_no_output1
+Mcu.Pin121=VP_TIM4_VS_no_output2
 Mcu.Pin13=PA14 (JTCK/SWCLK)
 Mcu.Pin14=PI2
 Mcu.Pin15=PH15
@@ -228,7 +240,7 @@ Mcu.Pin96=PB1
 Mcu.Pin97=PJ2
 Mcu.Pin98=PF11
 Mcu.Pin99=PG0
-Mcu.PinsNb=121
+Mcu.PinsNb=122
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H745XIHx
@@ -242,6 +254,7 @@ NVIC1.ForceEnableDMAVector=true
 NVIC1.HSEM1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC1.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.LPUART1_IRQn=true\:3\:0\:true\:false\:true\:true\:true
+NVIC1.LTDC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC1.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC1.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -726,7 +739,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-MX_DMA_Init-DMA-false-HAL-true-CortexM7,3-SystemClock_Config-RCC-false-HAL-false-CortexM7,4-MX_FMC_Init-FMC-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_LPUART1_UART_Init-LPUART1-false-HAL-true-CortexM7,7-MX_I2C1_Init-I2C1-false-HAL-true-CortexM7,8-MX_LTDC_Init-LTDC-true-HAL-true-CortexM7,9-MX_TIM3_Init-TIM3-false-HAL-true-CortexM7,10-MX_TIM4_Init-TIM4-false-HAL-true-CortexM7,11-MX_RTC_Init-RTC-false-HAL-true-CortexM7,1-MX_DMA_Init-DMA-false-HAL-true-CortexM4,2-MX_RTC_Init-RTC-true-HAL-false-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-MX_DMA_Init-DMA-false-HAL-true-CortexM7,3-SystemClock_Config-RCC-false-HAL-false-CortexM7,4-MX_FMC_Init-FMC-false-HAL-true-CortexM7,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM7,6-MX_LPUART1_UART_Init-LPUART1-false-HAL-true-CortexM7,7-MX_I2C1_Init-I2C1-false-HAL-true-CortexM7,8-MX_LTDC_Init-LTDC-false-HAL-true-CortexM7,9-MX_TIM3_Init-TIM3-false-HAL-true-CortexM7,10-MX_TIM4_Init-TIM4-false-HAL-true-CortexM7,11-MX_RTC_Init-RTC-false-HAL-true-CortexM7,12-MX_DMA2D_Init-DMA2D-false-HAL-true-CortexM7,1-MX_DMA_Init-DMA-true-HAL-true-CortexM4,2-MX_RTC_Init-RTC-true-HAL-false-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 QUADSPI.ClockPrescaler=4
 QUADSPI.FlashSize=25
 QUADSPI.IPParameters=ClockPrescaler,SampleShifting,FlashSize
@@ -757,19 +770,19 @@ RCC.DIVM2=5
 RCC.DIVM3=5
 RCC.DIVN1=160
 RCC.DIVN2=160
-RCC.DIVN3=160
+RCC.DIVN3=120
 RCC.DIVP1Freq_Value=400000000
 RCC.DIVP2Freq_Value=400000000
-RCC.DIVP3Freq_Value=400000000
+RCC.DIVP3Freq_Value=300000000
 RCC.DIVQ1=4
 RCC.DIVQ1Freq_Value=200000000
 RCC.DIVQ2Freq_Value=400000000
-RCC.DIVQ3Freq_Value=400000000
+RCC.DIVQ3Freq_Value=300000000
 RCC.DIVR1Freq_Value=400000000
 RCC.DIVR2=8
 RCC.DIVR2Freq_Value=100000000
-RCC.DIVR3=80
-RCC.DIVR3Freq_Value=10000000
+RCC.DIVR3=20
+RCC.DIVR3Freq_Value=30000000
 RCC.FDCANFreq_Value=200000000
 RCC.FLatency-AdvancedSettings=FLASH_LATENCY_0
 RCC.FMCCLockSelection=RCC_FMCCLKSOURCE_PLL2
@@ -786,7 +799,7 @@ RCC.LPTIM1Freq_Value=100000000
 RCC.LPTIM2Freq_Value=100000000
 RCC.LPTIM345Freq_Value=100000000
 RCC.LPUART1Freq_Value=100000000
-RCC.LTDCFreq_Value=10000000
+RCC.LTDCFreq_Value=30000000
 RCC.MCO1PinFreq_Value=64000000
 RCC.MCO2PinFreq_Value=400000000
 RCC.PLL1_VCI_Range-AdvancedSettings=RCC_PLL1VCIRANGE_0
@@ -820,7 +833,7 @@ RCC.USART234578Freq_Value=100000000
 RCC.USBFreq_Value=200000000
 RCC.VCO1OutputFreq_Value=800000000
 RCC.VCO2OutputFreq_Value=800000000
-RCC.VCO3OutputFreq_Value=800000000
+RCC.VCO3OutputFreq_Value=600000000
 RCC.VCOInput1Freq_Value=5000000
 RCC.VCOInput2Freq_Value=5000000
 RCC.VCOInput3Freq_Value=5000000
@@ -1005,6 +1018,8 @@ TIM4.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
 TIM4.IPParameters=Channel-Output Compare1 No Output,Channel-Output Compare2 No Output,Period,Prescaler,AutoReloadPreload
 TIM4.Period=99
 TIM4.Prescaler=2
+VP_DMA2D_VS_DMA2D.Mode=DMA2D_Activate
+VP_DMA2D_VS_DMA2D.Signal=DMA2D_VS_DMA2D
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_M4_VS_Systick.Mode=SysTick
